[package]
name = "jasonrpc"
version = "0.5.0"
edition = "2021"
rust-version = "1.82"
description = "Lightweight, transport-agnostic, spec-conforming JSON-RPC 2.0 for Rust"
license = "BSD-2-Clause"
repository = "https://github.com/ogital-net/jasonrpc"
readme = "README.md"
categories = ["network-programming", "encoding", "web-programming"]
keywords = ["json-rpc", "jsonrpc", "rpc", "uds", "hyper"]
include = [
    "src/**/*.rs",
    "tests/**/*.rs",
    "examples/**/*.rs",
    "benches/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[features]
default = ["backend-serde-json"]

# --- JSON backends (select exactly one) ---
backend-serde-json = ["dep:serde_json"]
backend-sonic = ["dep:sonic-rs"]

# --- Library layers ---
server = []
client = []
transport = []

# HTTP client transport
http-client = [
    "client",
    "dep:hyper",
    "dep:hyper-util",
    "dep:http",
    "dep:http-body-util",
    "dep:bytes",
]

# Individual framings (only meaningful with `transport`).
netstring = ["transport", "dep:itoa"]
newline = ["transport", "dep:memchr"]
# `Content-Length:` header framing, as used by LSP and the Debug Adapter
# Protocol. Length-prefixed and content-agnostic.
content-length = ["transport", "dep:memchr", "dep:itoa"]

# Async I/O helpers for the transport layer.
tokio = ["transport", "dep:tokio"]

# Batteries-included Unix-domain-socket client (`UdsClient`). Connects a
# `UnixStream`, wraps it in the multiplexing transport, and hands back a
# ready-to-use `Client`. Unix-only; a no-op on other platforms.
uds = ["client", "tokio"]

# --- Integrations ---
hyper = ["server", "dep:hyper", "dep:http", "dep:http-body-util", "dep:bytes"]
# `tower` pulls in only the tiny `tower-service` + `http` traits, so it drops
# into an axum/tower stack without dragging in the whole `tower` crate.
tower = ["server", "dep:tower-service", "dep:http", "dep:http-body", "dep:http-body-util", "dep:bytes"]

# WebSocket integration. `serve` drives a `Router` over a WebSocket
# connection: each text message is one JSON-RPC message. Built on
# `fastwebsockets`, whose `upgrade` path reuses the `hyper` stack this crate
# already depends on, so it adds little beyond the unavoidable RFC6455 bits
# (sha1/base64 handshake, utf-8 validation). `tokio/macros` is needed for the
# `select!` in the graceful-shutdown serve loop.
websocket = ["server", "tokio", "tokio/macros", "dep:fastwebsockets", "dep:http-body-util", "dep:bytes"]

[dependencies]
serde = { version = "1", features = ["derive"] }

# JSON backends (optional, one selected via feature).
serde_json = { version = "1", optional = true, features = ["raw_value"] }
sonic-rs = { version = "0.5", optional = true }

# Transport async I/O (optional). `sync`/`rt` back the multiplexing client
# transport (oneshot correlation channels + a background reader task).
tokio = { version = "1", optional = true, features = ["io-util", "net", "sync", "rt", "time"] }

# Free transitive deps we use directly in framing codecs.
itoa = { version = "1", optional = true }
memchr = { version = "2", optional = true }

# Hyper integration (optional). `client`/`http1` are needed by the HTTP client
# transport; the server integration only needs `server`/`http1`.
hyper = { version = "1", optional = true, features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", optional = true, features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }

# Tower integration (optional). Kept minimal: just the service + http traits.
tower-service = { version = "0.3", optional = true }

# WebSocket integration (optional). `upgrade` reuses hyper for the HTTP upgrade
# handshake; `simd` enables SIMD frame masking/unmasking.
fastwebsockets = { version = "0.10", optional = true, features = ["upgrade", "simd"] }
# HTTP types used by RequestContext — pulled in by hyper or tower features.
# Lightweight (just bytes + itoa, both already transitive), but kept optional
# so protocol+json users don't pay for it.
http = { version = "1", optional = true }
http-body = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "net", "time"] }
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
criterion = "0.5"

[[example]]
name = "hyper_demo"
required-features = ["hyper", "http-client"]

[[example]]
name = "oauth_client_credentials"
required-features = ["hyper", "http-client", "tokio"]

[[example]]
name = "uds_demo"
required-features = ["server", "client", "uds", "netstring", "tokio"]

[[example]]
name = "gateway_demo"
required-features = ["server", "http-client", "hyper", "uds", "netstring", "tokio"]

[[example]]
name = "ws_controller"
required-features = ["server", "websocket", "tokio", "hyper"]

# Dispatch/serialization microbenchmarks. Compiles under whichever JSON backend
# is selected, so the same bench runs against both for a head-to-head compare
# (see the header comment in benches/dispatch.rs).
#
# Intentionally no `required-features`: that would make a plain `cargo bench`
# silently skip this target. Instead the bench compiles under any feature set
# and, when the needed features are off, prints how to re-run.
[[bench]]
name = "dispatch"
harness = false

[package.metadata.docs.rs]
features = ["server", "client", "transport", "netstring", "newline", "content-length", "tokio", "uds", "hyper", "tower", "websocket", "http-client"]
rustdoc-args = ["--cfg", "docsrs"]
